--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
 </nav> 
 
-        <nav>
+<!--         <nav>
             <h3>BlogSpace</h3>
-        </nav>
+        </nav> -->
         <form id="new-post">
             <label for="post-title">Title:</label>
             <input id="post-title" type="text" />
